# fire_shield

./: .gitignore  AGENTS.md  BUILDERS.md  DEMO.md  README.md  backlog.md  lwf-plant-fields.json  start.sh
backend/: .env.example  Dockerfile  Makefile  fly.toml  main.py  pyproject.toml  railway.json
backend/app/: database.py
backend/app/admin/: routes.py
backend/app/audit/: logger.py  routes.py
backend/app/auth/: dependencies.py  rate_limiter.py  routes.py  service.py
backend/app/building/: context.py  routes.py  service.py
backend/app/config/: __init__.py  app_init.py  config.py  database.py  main.py
backend/app/evidence/: routes.py  service.py
backend/app/ingest/: __init__.py  chunk_validator.py  chunker.py  doc_type_detector.py  extractor.py  indexer.py  pipeline.py  routes.py
backend/app/jurisdiction/: resolver.py  routes.py
backend/app/llms/: routes.py
backend/app/memory/: extractor.py  routes.py  service.py
backend/app/middleware/: middleware.py
backend/app/migrations/: 001_initial.sql  002_cloud_audit.sql  002_extraction_checkpoints.sql  002_seed_jurisdictions.sql  003_document_metadata.sql  003_ingestion_ui.sql  003_seed_zone_actions.sql  004_add_ingest_fields.sql  004_validation_state.sql  005_release_date.sql  006_document_category.sql  007_cloud_instance_events.sql  007_detection_confidence.sql  007_query_logging.sql  008_conversation_memory.sql
backend/app/models/: __init__.py  audit.py  auth.py  documents.py  query.py
backend/scripts/: prepare_buildings.py  prepare_buildings.sh  start.sh
backend/tests/: conftest.py
(+92 files in other folders)
