[project]
name = "fire-shield-backend"
version = "1.0.0"
description = "Fire Shield wildfire prevention API — Rogue Valley, Oregon"
requires-python = ">=3.11"

dependencies = [
    # Web framework
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "python-multipart>=0.0.9",

    # Validation
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",

    # Database
    "aiosqlite>=0.20.0",

    # PDF extraction
    "PyMuPDF>=1.23.0",

    # ML / Embeddings / Reranking
    "sentence-transformers>=3.0.0",

    # Vector store
    "qdrant-client>=1.7.0",

    # LLM clients
    "httpx>=0.27.0",
    "anthropic>=0.34.0",
    "aiohttp>=3.9.0",

    # Geospatial — building footprint queries
    "geopandas>=1.0.0",
    "pyogrio>=0.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.26.0",
    "ruff>=0.1.0",
    "bandit>=1.7.0",
    "pre-commit>=3.6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.bandit]
exclude_dirs = ["tests", "scripts"]
skips = ["B101"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests", "app"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
